--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -71,6 +71,7 @@
   "item.simplyswords.diamond_scythe": "Diamond Scythe",
   "item.simplyswords.netherite_scythe": "Netherite Scythe",
   "item.simplyswords.runic_chakram": "Runic Chakram",
+  "item.simplyswords.runic_scythe": "Runic Scythe",
   "item.simplyswords.storms_edge": "Storm's Edge",
   "item.simplyswords.stormbringer": "Stormbringer",
   "item.simplyswords.sword_on_a_stick": "Sword on a Stick",
@@ -96,6 +97,8 @@
   "item.simplyswords.mythicmetals_compat.adamantite.adamantite_greathammer": "Adamantite Greathammer",
   "item.simplyswords.mythicmetals_compat.adamantite.adamantite_greataxe": "Adamantite Greataxe",
   "item.simplyswords.mythicmetals_compat.adamantite.adamantite_chakram": "Adamantite Chakram",
+  "item.simplyswords.mythicmetals_compat.adamantite.adamantite_scythe": "Adamantite Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_claymore": "Aquarium Claymore",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_cutlass": "Aquarium Cutlass",
@@ -110,6 +113,8 @@
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_greathammer": "Aquarium Greathammer",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_greataxe": "Aquarium Greataxe",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_chakram": "Aquarium Chakram",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_scythe": "Aquarium Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.banglum.banglum_claymore": "Banglum Claymore",
   "item.simplyswords.mythicmetals_compat.banglum.banglum_cutlass": "Banglum Cutlass",
@@ -124,6 +129,8 @@
   "item.simplyswords.mythicmetals_compat.banglum.banglum_greathammer": "Banglum Greathammer",
   "item.simplyswords.mythicmetals_compat.banglum.banglum_greataxe": "Banglum Greataxe",
   "item.simplyswords.mythicmetals_compat.banglum.banglum_chakram": "Banglum Chakram",
+  "item.simplyswords.mythicmetals_compat.banglum.banglum_scythe": "Banglum Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.carmot.carmot_claymore": "Carmot Claymore",
   "item.simplyswords.mythicmetals_compat.carmot.carmot_cutlass": "Carmot Cutlass",
@@ -138,6 +145,8 @@
   "item.simplyswords.mythicmetals_compat.carmot.carmot_greathammer": "Carmot Greathammer",
   "item.simplyswords.mythicmetals_compat.carmot.carmot_greataxe": "Carmot Greataxe",
   "item.simplyswords.mythicmetals_compat.carmot.carmot_chakram": "Carmot Chakram",
+  "item.simplyswords.mythicmetals_compat.carmot.carmot_scythe": "Carmot Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.kyber.kyber_claymore": "Kyber Claymore",
   "item.simplyswords.mythicmetals_compat.kyber.kyber_cutlass": "Kyber Cutlass",
@@ -152,6 +161,8 @@
   "item.simplyswords.mythicmetals_compat.kyber.kyber_greathammer": "Kyber Greathammer",
   "item.simplyswords.mythicmetals_compat.kyber.kyber_greataxe": "Kyber Greataxe",
   "item.simplyswords.mythicmetals_compat.kyber.kyber_chakram": "Kyber Chakram",
+  "item.simplyswords.mythicmetals_compat.kyber.kyber_scythe": "Kyber Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.mythril.mythril_claymore": "Mythril Claymore",
   "item.simplyswords.mythicmetals_compat.mythril.mythril_cutlass": "Mythril Cutlass",
@@ -166,6 +177,8 @@
   "item.simplyswords.mythicmetals_compat.mythril.mythril_greathammer": "Mythril Greathammer",
   "item.simplyswords.mythicmetals_compat.mythril.mythril_greataxe": "Mythril Greataxe",
   "item.simplyswords.mythicmetals_compat.mythril.mythril_chakram": "Mythril Chakram",
+  "item.simplyswords.mythicmetals_compat.mythril.mythril_scythe": "Mythril Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_claymore": "Orichalcum Claymore",
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_cutlass": "Orichalcum Cutlass",
@@ -180,6 +193,8 @@
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_greathammer": "Orichalcum Greathammer",
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_greataxe": "Orichalcum Greataxe",
   "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_chakram": "Orichalcum Chakram",
+  "item.simplyswords.mythicmetals_compat.orichalcum.orichalcum_scythe": "Orichalcum Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.osmium.osmium_claymore": "Osmium Claymore",
   "item.simplyswords.mythicmetals_compat.osmium.osmium_cutlass": "Osmium Cutlass",
@@ -194,6 +209,8 @@
   "item.simplyswords.mythicmetals_compat.osmium.osmium_greathammer": "Osmium Greathammer",
   "item.simplyswords.mythicmetals_compat.osmium.osmium_greataxe": "Osmium Greataxe",
   "item.simplyswords.mythicmetals_compat.osmium.osmium_chakram": "Osmium Chakram",
+  "item.simplyswords.mythicmetals_compat.osmium.osmium_scythe": "Osmium Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_claymore": "Prometheum Claymore",
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_cutlass": "Prometheum Cutlass",
@@ -208,6 +225,8 @@
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_greathammer": "Prometheum Greathammer",
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_greataxe": "Prometheum Greataxe",
   "item.simplyswords.mythicmetals_compat.prometheum.prometheum_chakram": "Prometheum Chakram",
+  "item.simplyswords.mythicmetals_compat.prometheum.prometheum_scythe": "Prometheum Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_claymore": "Quadrillum Claymore",
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_cutlass": "Quadrillum Cutlass",
@@ -222,6 +241,8 @@
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_greathammer": "Quadrillum Greathammer",
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_greataxe": "Quadrillum Greataxe",
   "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_chakram": "Quadrillum Chakram",
+  "item.simplyswords.mythicmetals_compat.quadrillum.quadrillum_scythe": "Quadrillum Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.runite.runite_claymore": "Runite Claymore",
   "item.simplyswords.mythicmetals_compat.runite.runite_cutlass": "Runite Cutlass",
@@ -236,6 +257,8 @@
   "item.simplyswords.mythicmetals_compat.runite.runite_greathammer": "Runite Greathammer",
   "item.simplyswords.mythicmetals_compat.runite.runite_greataxe": "Runite Greataxe",
   "item.simplyswords.mythicmetals_compat.runite.runite_chakram": "Runite Chakram",
+  "item.simplyswords.mythicmetals_compat.runite.runite_scythe": "Runite Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_claymore": "Star Platinum Claymore",
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_cutlass": "Star Platinum Cutlass",
@@ -250,6 +273,8 @@
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_greathammer": "Star Platinum Greathammer",
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_greataxe": "Star Platinum Greataxe",
   "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_chakram": "Star Platinum Chakram",
+  "item.simplyswords.mythicmetals_compat.star_platinum.star_platinum_scythe": "Star Platinum Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.bronze.bronze_claymore": "Bronze Claymore",
   "item.simplyswords.mythicmetals_compat.bronze.bronze_cutlass": "Bronze Cutlass",
@@ -264,6 +289,8 @@
   "item.simplyswords.mythicmetals_compat.bronze.bronze_greathammer": "Bronze Greathammer",
   "item.simplyswords.mythicmetals_compat.bronze.bronze_greataxe": "Bronze Greataxe",
   "item.simplyswords.mythicmetals_compat.bronze.bronze_chakram": "Bronze Chakram",
+  "item.simplyswords.mythicmetals_compat.bronze.bronze_scythe": "Bronze Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.palladium.palladium_claymore": "Palladium Claymore",
   "item.simplyswords.mythicmetals_compat.palladium.palladium_cutlass": "Palladium Cutlass",
@@ -278,6 +305,8 @@
   "item.simplyswords.mythicmetals_compat.palladium.palladium_greathammer": "Palladium Greathammer",
   "item.simplyswords.mythicmetals_compat.palladium.palladium_greataxe": "Palladium Greataxe",
   "item.simplyswords.mythicmetals_compat.palladium.palladium_chakram": "Palladium Chakram",
+  "item.simplyswords.mythicmetals_compat.palladium.palladium_scythe": "Palladium Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_claymore": "Stormyx Claymore",
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_cutlass": "Stormyx Cutlass",
@@ -292,6 +321,8 @@
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_greathammer": "Stormyx Greathammer",
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_greataxe": "Stormyx Greataxe",
   "item.simplyswords.mythicmetals_compat.stormyx.stormyx_chakram": "Stormyx Chakram",
+  "item.simplyswords.mythicmetals_compat.stormyx.stormyx_scythe": "Stormyx Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.steel.steel_claymore": "Steel Claymore",
   "item.simplyswords.mythicmetals_compat.steel.steel_cutlass": "Steel Cutlass",
@@ -306,6 +337,8 @@
   "item.simplyswords.mythicmetals_compat.steel.steel_greathammer": "Steel Greathammer",
   "item.simplyswords.mythicmetals_compat.steel.steel_greataxe": "Steel Greataxe",
   "item.simplyswords.mythicmetals_compat.steel.steel_chakram": "Steel Chakram",
+  "item.simplyswords.mythicmetals_compat.steel.steel_scythe": "Steel Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.celestium.celestium_claymore": "Celestium Claymore",
   "item.simplyswords.mythicmetals_compat.celestium.celestium_cutlass": "Celestium Cutlass",
@@ -320,6 +353,8 @@
   "item.simplyswords.mythicmetals_compat.celestium.celestium_greathammer": "Celestium Greathammer",
   "item.simplyswords.mythicmetals_compat.celestium.celestium_greataxe": "Celestium Greataxe",
   "item.simplyswords.mythicmetals_compat.celestium.celestium_chakram": "Celestium Chakram",
+  "item.simplyswords.mythicmetals_compat.celestium.celestium_scythe": "Celestium Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_claymore": "Metallurgium Claymore",
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_cutlass": "Metallurgium Cutlass",
@@ -334,6 +369,8 @@
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_greathammer": "Metallurgium Greathammer",
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_greataxe": "Metallurgium Greataxe",
   "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_chakram": "Metallurgium Chakram",
+  "item.simplyswords.mythicmetals_compat.metallurgium.metallurgium_scythe": "Metallurgium Scythe",
+
 
   "item.simplyswords.mythicmetals_compat.copper.copper_longsword": "Copper Longsword",
   "item.simplyswords.mythicmetals_compat.durasteel.durasteel_greathammer": "Durasteel Greathammer",
@@ -375,8 +412,8 @@
   "item.simplyswords.ferocitysworditem.tooltip2": "Chance on hit to increase your attack speed, stacking up to 15 times",
   "item.simplyswords.ferocitysworditem.tooltip3": "Consume all stacks, gaining strength for a duration equal to the amount of stacks consumed",
   "item.simplyswords.rendsworditem.tooltip1": "Unique Effect: Soul Rend",
-  "item.simplyswords.rendsworditem.tooltip2": "Chance on hit to inflict stacking weakness",
-  "item.simplyswords.rendsworditem.tooltip3": "Consume all stacks of weakness from surrounding foes, damaging them and healing you equal to the stacks",
+  "item.simplyswords.rendsworditem.tooltip2": "Chance on hit to inflict stacking weakening effects",
+  "item.simplyswords.rendsworditem.tooltip3": "Consume all stacks from surrounding foes, damaging them and healing you relative to the stacks",
 
 
   "item.simplyswords.levitationsworditem.tooltip1": "Runic Power: Float",
