Unique weapons Twilight & Soulkeeper added (Still needs effects) Tag fixes

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -81,6 +81,8 @@
   "item.simplyswords.emberblade": "Emberblade",
   "item.simplyswords.hearthflame": "Hearthflame",
   "item.simplyswords.twisted_blade": "Twisted Blade",
+  "item.simplyswords.twilight": "Twilight",
+  "item.simplyswords.soulkeeper": "Soulkeeper",
   "item.simplyswords.soulrender": "Soulrender",
 
 
