Soulstealer related server error fixed Tooltips squished for many weapons Plague effect remade - now converts positive effects into negative effects Omen instantkill threshold adjusted to be % of total HP instead of flat value (Tooltip adjusted to reflect) Watcher effect radius reduced Storm effect radius reduced Soulkeeper regen adjustments & resistance reduction Soulkeeper related server error fixed Soulrender damage weights adjusted Greataxe & Greathammer attack speed slightly increased

--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -400,26 +400,50 @@
   "item.simplyswords.bramblesworditem.tooltip2": "Chance on hit to release a blanket of toxic spores, slowing and poisoning anything nearby",
   "item.simplyswords.stormsworditem.tooltip1": "Unique Effect: Storm",
   "item.simplyswords.stormsworditem.tooltip2": "When raining/wet: Chance on hit to bring lightning down from the sky upon your foes",
+
   "item.simplyswords.watchersworditem.tooltip1": "Unique Effect: Omen",
-  "item.simplyswords.watchersworditem.tooltip2": "Chance on hit to rip the life from an injured target and grant it as absorption to the wielder",
-  "item.simplyswords.watchersworditem.tooltip3": "Unique Effect: Watcher",
-  "item.simplyswords.watchersworditem.tooltip4": "Chance on hit to siphon the health of nearby enemies, healing the wielder",
+  "item.simplyswords.watchersworditem.tooltip2": "Chance on hit to rip the life from a",
+  "item.simplyswords.watchersworditem.tooltip3": "target below %d%% HP and grant some",
+  "item.simplyswords.watchersworditem.tooltip4": "of it as absorption to the wielder.",
+  "item.simplyswords.watchersworditem.tooltip5": "Unique Effect: Watcher",
+  "item.simplyswords.watchersworditem.tooltip6": "Chance on hit to siphon the health",
+  "item.simplyswords.watchersworditem.tooltip7": "of nearby enemies, healing the wielder.",
+
   "item.simplyswords.plaguesworditem.tooltip1": "Unique Effect: Plague",
-  "item.simplyswords.plaguesworditem.tooltip2": "Chance on hit to inflict the target with a lethal illness",
+  "item.simplyswords.plaguesworditem.tooltip2": "Chance on hit to convert positive effects",
+  "item.simplyswords.plaguesworditem.tooltip3": "into their negative counterpart",
+
   "item.simplyswords.emberiresworditem.tooltip1": "Unique Effect: Ember Ire",
-  "item.simplyswords.emberiresworditem.tooltip2": "Chance on hit to cloak the wielder in flames, damaging them while granting strength",
-  "item.simplyswords.emberiresworditem.tooltip3": "Consume the flames, losing strength and summoning forth a fireball",
+  "item.simplyswords.emberiresworditem.tooltip2": "Chance on hit to cloak the wielder in",
+  "item.simplyswords.emberiresworditem.tooltip3": "flames, damaging them while granting strength.",
+  "item.simplyswords.emberiresworditem.tooltip4": "Consume the flames, losing strength and",
+  "item.simplyswords.emberiresworditem.tooltip5": "summoning forth a fireball.",
+
   "item.simplyswords.volcanicfurysworditem.tooltip1": "Unique Effect: Volcanic Fury",
-  "item.simplyswords.volcanicfurysworditem.tooltip2": "Chance on hit ignite your target and send them flying",
+  "item.simplyswords.volcanicfurysworditem.tooltip2": "Chance on hit to ignite your target",
+  "item.simplyswords.volcanicfurysworditem.tooltip3": "and send them flying.",
+
   "item.simplyswords.ferocitysworditem.tooltip1": "Unique Effect: Ferocity",
-  "item.simplyswords.ferocitysworditem.tooltip2": "Chance on hit to increase your attack speed, stacking up to 15 times",
-  "item.simplyswords.ferocitysworditem.tooltip3": "Consume all stacks, gaining strength for a duration equal to the amount of stacks consumed",
+  "item.simplyswords.ferocitysworditem.tooltip2": "Chance on hit to increase your attack",
+  "item.simplyswords.ferocitysworditem.tooltip3": "speed, stacking up to 15 times.",
+  "item.simplyswords.ferocitysworditem.tooltip4": "Consume all stacks, gaining strength,",
+  "item.simplyswords.ferocitysworditem.tooltip5": "for a duration equal to the amount of",
+  "item.simplyswords.ferocitysworditem.tooltip6": "stacks consumed.",
+
   "item.simplyswords.rendsworditem.tooltip1": "Unique Effect: Soul Rend",
-  "item.simplyswords.rendsworditem.tooltip2": "Chance on hit to inflict stacking weakening effects",
-  "item.simplyswords.rendsworditem.tooltip3": "Consume all stacks from surrounding foes, damaging them and healing you relative to the stacks",
+  "item.simplyswords.rendsworditem.tooltip2": "Chance on hit to inflict stacking weakening",
+  "item.simplyswords.rendsworditem.tooltip3": "effects.",
+  "item.simplyswords.rendsworditem.tooltip4": "Consume all stacks from surrounding foes,",
+  "item.simplyswords.rendsworditem.tooltip5": "damaging them and healing you relative to",
+  "item.simplyswords.rendsworditem.tooltip6": "the stacks consumed.",
+
   "item.simplyswords.soulsworditem.tooltip1": "Unique Effect: Soul Meld",
-  "item.simplyswords.soulsworditem.tooltip2": "Chance on hit to absorb nearby souls, toughening and slowing the attack speed of the wielder",
-  "item.simplyswords.soulsworditem.tooltip3": "Realease the souls, transferring the attack speed debuff to nearby foes and regenerating the wielder",
+  "item.simplyswords.soulsworditem.tooltip2": "Chance on hit to absorb nearby souls, toughening ",
+  "item.simplyswords.soulsworditem.tooltip3": "and slowing the attack speed of the wielder.",
+  "item.simplyswords.soulsworditem.tooltip4": "Release the souls, transferring the attack",
+  "item.simplyswords.soulsworditem.tooltip5": "speed debuff to nearby foes and regenerating",
+  "item.simplyswords.soulsworditem.tooltip6": "the wielder.",
+
   "item.simplyswords.stealsworditem.tooltip1": "Unique Effect: Soul Steal",
   "item.simplyswords.stealsworditem.tooltip2": "Chance on hit to absorb your opponents soul,",
   "item.simplyswords.stealsworditem.tooltip3": "hastening you while slowing and marking your",
