--- a/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -107,7 +107,7 @@
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_cutlass": "Aquarium Cutlass",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_glaive": "Aquarium Glaive",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_katana": "Aquarium Katana",
-  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_longsword": "aquarium Longsword",
+  "item.simplyswords.mythicmetals_compat.aquarium.aquarium_longsword": "Aquarium Longsword",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_rapier": "Aquarium Rapier",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_sai": "Aquarium Sai",
   "item.simplyswords.mythicmetals_compat.aquarium.aquarium_spear": "Aquarium Spear",
