Balance pass Longsword range increased and damage modifiers adjusted Twinblade, rapier, and sai attack speeds reduced Runic Warglaive added Livyatan attack combo changed

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -48,6 +48,7 @@
   "item.simplyswords.runic_twinblade": "Runic Twinblade",
   "item.simplyswords.runic_glaive": "Runic Glaive",
   "item.simplyswords.runic_spear": "Runic Spear",
+  "item.simplyswords.runic_warglaive": "Runic Warglaive",
   "item.simplyswords.runic_greathammer": "Runic Greathammer",
   "item.simplyswords.runic_greataxe": "Runic Greataxe",
   "item.simplyswords.iron_twinblade": "Iron Twinblade",
