Unique Halberd partial implementation: Thunderbrand

--- a/common/src/main/resources/assets/simplyswords/lang/en_us.json
+++ b/common/src/main/resources/assets/simplyswords/lang/en_us.json
@@ -92,6 +92,7 @@
   "item.simplyswords.livyatan": "Livyatan",
   "item.simplyswords.icewhisper": "Icewhisper",
   "item.simplyswords.arcanethyst": "Arcanethyst (%d / 3)",
+  "item.simplyswords.thunderbrand": "Thunderbrand",
 
   "item.simplyswords.runic_tablet": "Runic Tablet",
 
